added methods on factory to create an edit view model

--- a/PPETracker/Views/Products/AddNew.cshtml
+++ b/PPETracker/Views/Products/AddNew.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add New Product";
 }
 
-<h1>Add New Product</h1>
+<h1 class="text-center">Add New Product</h1>
 
 <hr />
 <div class="row">
