--- a/PPETracker/Views/Products/Dashboard.cshtml
+++ b/PPETracker/Views/Products/Dashboard.cshtml
@@ -10,7 +10,7 @@
         float: left !important;
     }
 </style>
-<h1>Dashboard</h1>
+<h1 class="text-center">Dashboard</h1>
     
 <div class="container">
     <div class="row">
