added code to handle image files in Edit post, changed Edit so that category cannot be edited

--- a/PPETracker/Views/Products/Dashboard.cshtml
+++ b/PPETracker/Views/Products/Dashboard.cshtml
@@ -97,7 +97,8 @@
         $(document).ready(function () {
             var ppeTable = $('#ppe-table').DataTable({
                 "order": [[1, "asc"]],
-                "dom": '<"pull-left"f>ti'
+                "dom": '<"pull-left"f>ti',
+                "paging": false
             });
 
             $(document).keypress(
